list view steps and ingredients for admin upload recipe

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     //database dependencies
     implementation 'mysql:mysql-connector-java:5.1.49'
 
+    implementation 'com.google.android.material:material:1.0.0'
+
 
 }
