--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation files('app/libs/mysql-connector-java-8.0.27.zip')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     //database dependencies
-    implementation 'mysql:mysql-connector-java:5.1.49'
+    implementation 'mysql:mysql-connector-java:8.0.32'
 
     implementation 'com.google.android.material:material:1.0.0'
 
